tests/rosetta/out/Pascal/catalan-numbers-2.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/catalan-numbers-2.pas
catalan-numbers-2.pas(28,7) Error: Identifier not found "i"
catalan-numbers-2.pas(28,7) Error: Ordinal expression expected
catalan-numbers-2.pas(28,7) Error: Illegal counter variable
catalan-numbers-2.pas(30,33) Error: Identifier not found "i"
catalan-numbers-2.pas(37) Fatal: There were 4 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
