tests/rosetta/out/Pascal/catalan-numbers-2.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T10:01:37Z
program CatalanNumbers2;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

function catalanRec(n: integer): integer;
var
  t1: integer;
  t2: integer;
  t3: integer;
  t5: integer;
begin
  if (n = 0) then ;
  t1 := 2 * n;
  t2 := t1 - 1;
  t3 := 2 * t2;
  t5 := t3 * catalanRec(n - 1);
  result := Trunc(t5 div n + 1);
  exit;
end;

function main(): integer;
begin
  for i := 1 to 16 - 1 do
  begin
    writeln(IntToStr(catalanRec(i)));
  end;
end;

begin
  main();
end.
